# tic-tac-toe

./: .gitignore  Anchor.toml  package.json  tsconfig.json
game/: Anchor.toml  Cargo.toml  eslint.config.mjs  package.json
game/programs/tic-tac-toe/: .rustfmt.toml  Cargo.toml
game/programs/tic-tac-toe/src/: lib.rs
game/programs/tic-tac-toe/src/instructions/: play.rs  setup_game.rs
game/programs/tic-tac-toe/src/state/: game.rs
game/scripts/: generate-clients.ts
game/tests/: tic-tac-toe.ts
play-game/: Cargo.toml
play-game/src/: game.rs  main.rs  tests.rs  transaction.rs  util.rs
programs/tic-tac-toe/: Cargo.toml
programs/tic-tac-toe/src/: lib.rs
programs/tic-tac-toe/src/state/: game.rs
tests/: tic-tac-toe.ts
