[package]
name = "play-game"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.5"
dirs = "6.0.0"
solana-transaction-status = "2.1.14"
solana-client = "2.1.14"
solana-sdk = "2.1.14"
solana-program = "2.1.14"
once_cell = "1.20.3"
serde_yaml = "0.9.34"
serde = { version = "1.0.218", features = ["derive"] }
solana-transaction-status-client-types = "2.1.14"
